# iter-together-2

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
src/iter_together/: __init__.py  utils.py
tests/: test1.txt  test2.txt  test_utils.py
