##########################
# Setup.py Configuration #
##########################

[metadata]
name = iter_together
version = 0.0.1-dev
description = This package has utilities for iterating over files.
long_description = file: README.md
long_description_content_type = text/markdown

# Project info
url = https://github.com/vcchatman/iter-together-2

# Author info
author = Vanessa Chatman
author_email = chatman.v@northeastern.edu
maintainer = Vanessa Chatman
maintainer_email = chatman.v@northeastern.edu

# License
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
# TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)

keywords =
    file utils
    iteration

[options]
# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short